--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,12 @@
+#UI Jira
+jiraUrl=https://edujira.ifellow.ru/secure/Dashboard.jspa
+login=suhinina
+password=Qwerty123
+PROJECT = Test
+
+#Rick and Morty
 BASE_URI=https://rickandmortyapi.com/api
+
+#API Potato
+CREATE_USER =/users
+Uri =https://reqres.in/api
